# mzgl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  mzgl.cmake  wc.csv  wc.sh
cmake/: GraphicsBackend.cmake  android.cmake  apple.cmake  build-flags.cmake  cpm.cmake  dependencies.cmake  flags.cmake  ios.toolchain.cmake  libraries.cmake  linux.cmake  log-saver.cmake  mzgl.cmake  package-manager.cmake  paths.cmake  platforms.cmake  policies.cmake  print.cmake  properties.cmake  sources.cmake  warning-saver.cmake  warnings.cmake  windows.cmake
doc/: howto.txt
examples/: CMakeLists.txt  README.md
examples/01_App/: 01_App.cpp  CMakeLists.txt
examples/02_Drawing/: 02_Drawing.cpp  CMakeLists.txt
examples/03_Audio/: 03_Audio.cpp  CMakeLists.txt
examples/04_Dialogs/: 04_Dialogs.cpp  CMakeLists.txt
lib/AudioShare/: AudioShareSDK.h  AudioShareSDK.m
lib/ZipFile/: CMakeLists.txt  ZipFile.cpp  ZipFile.h  ZipReader.cpp  ZipReader.h  ZipStreamer.cpp  ZipStreamer.h
lib/ZipFile/lib/zipper/: CMakeLists.txt
lib/ZipFile/lib/zipper/minizip/: CMakeLists.txt  ioapi.c  ioapi_buf.c  miniunz.c  minizip.c  unzip.c
lib/ZipFile/lib/zipper/utf8helper/: win32io_utf8.cpp  win32io_utf8.h
lib/ZipFile/lib/zipper/zipper/: CDirEntry.cpp  Timestamp.h  defs.h  tools.cpp  tools.h  unzipper.cpp  zipper.cpp
lib/boost/config/: user.hpp
lib/elfxml/: CMakeLists.txt  elfxml.cpp  elfxml.h
lib/fontstash/: fontstash.h  gl3corefontstash.h  glfontstash.h
lib/fsystem/: CMakeLists.txt  fsystem.h
lib/glew/: CMakeLists.txt
lib/misc/: AiffFile.h  DisableAllWarnings.h  MPE_fastpoly2tri.h  dr_flac.h  dr_mp3.h  dr_wav.h  filesystem.h  httplib.h  json.hpp  small_function.hpp  stb_image.h  stb_image_write.h
lib/mzgl/: App.cpp  App.h  LiveCodeApp.h  Plugin.h  PluginEditor.h  PluginParameter.h  WebViewApp.h  mzgl.pch  mzgl_platform.h
lib/mzgl/animation/: SoftEnable.h  Tween.cpp  Tween.h  animation.h
lib/mzgl/audio/: AACEncoder.cpp  AACEncoder.h  AudioBufferAdaptor.h  AudioFile.h  AudioFileAndroid.cpp  AudioFileApple.cpp  AudioFileDrLib.cpp  AudioFileDrLib.h  AudioSystem.cpp  AudioSystem.h  DrAudioFileReader.cpp  DrAudioFileReader.h  Resampler.cpp  Resampler.h  ThreadedDummyAudioSystem.h  VariableBufferSizeAudioSystem.h
lib/mzgl/geom/: LineEquation.h  QuadraticEquation.h  Rectf.cpp  Rectf.h  RoundedRect.cpp  RoundedRect.h  SVG.cpp  SVG.h  Triangulator.cpp  Triangulator.h  geomutils.cpp  geomutils.h
lib/mzgl/gl/: DefaultFont.inc.h  Fbo.cpp  Fbo.h  Font.cpp  Font.h  Geometry.h  Graphics.cpp  Graphics.h  Image-win.cpp  Image.cpp  Image.h  Image.mm  MatrixStack.h  NVG.cpp  NVG.h  ScopedMask.cpp  ScopedMask.h  Shader.cpp  Shader.h  SvgVbo.cpp  SvgVbo.h  Texture.cpp  Texture.h  Vbo.cpp  Vbo.h  colors.cpp  colors.h  error.cpp  error.h  glUtil.cpp  glUtil.h  mzOpenGL.h
lib/mzgl/midi/: AllMidiDevices.cpp  AllMidiDevices.h  AllMidiDevicesAndroidImpl.cpp  AllMidiDevicesAndroidImpl.h  AllMidiDevicesAppleImpl.h  AllMidiDevicesAppleImpl.mm  AllMidiDevicesImpl.h  AllMidiDevicesRtMidiImpl.h  Midi.cpp  Midi.h  MidiCCMessageParser.cpp  MidiCCMessageParser.h  MidiCCModeDetector.cpp  MidiCCModeDetector.h  MidiDevice.h  MidiMessage.cpp  MidiMessage.h  MidiMessageParser.cpp  MidiMessageParser.h  appleMidiUtils.cpp  appleMidiUtils.h  midiMessagePrinting.cpp  midiMessagePrinting.h
lib/mzgl/music/: -Note.h  NotePattern.cpp  NotePattern.h  chords.cpp  chords.h  scales.cpp  scales.h
lib/mzgl/net/: FileDownloader.cpp  FileDownloader.h  netUtil.cpp  netUtil.h
lib/mzgl/test/: audioBufferAdaptorTests.cpp  audioFileBadFileTests.cpp  audioFileDrLibTests.cpp  audioFileLoadTests.cpp  audioFileOomTests.cpp  audioFileResampleTests.cpp  audioFileTests.cpp  base64Tests.cpp  chordNameTests.cpp  datetimeTests.cpp  fixedSizeCircularBufferTests.cpp  floatBufferTests.cpp  imageLoadTests.cpp  listenerTests.cpp  mathsTests.cpp  midiCCMessageParserTests.cpp  midiCCModeDetectorTests.cpp  midiMessageTests.cpp  (+15 more)
lib/nanovg/: fontstash-nvg.h  nanovg.cpp  nanovg.h  nanovg_gl.h
lib/sokol/: sokol_gfx.h
lib/speex/: arch.h  speex_resampler.cpp  speex_resampler.h
lib/xsimd/: marek-note.md
lib/yoga/: Yoga.cpp  ylog.cpp  ylog.h
lib/zipper/: CMakeLists.txt  Doxyfile  LICENSE.md  README.md  zipper.pc.cmakein  zipper.sln  zipperConfig.cmake.in
scripts/: create_ios_mzgl_project.sh  do_default_opengl_shaders.py  make-test-files.sh
test-files/basic-audio/: sine440.aif  sine440_aac.m4a  sine440_alac.m4a  sine440_flac16.flac  sine440_flac16_stereo.flac  sine440_flac24.flac  sine440_flac24_stereo.flac
test-files/valid-files/: 22050Hz - 16Bits - BE - Mono.aiff  22050Hz - 16Bits - BE - Stereo.aiff  22050Hz - 16Bits - LE - Mono.aiff  22050Hz - 16Bits - LE - Stereo.aiff  22050Hz - 24Bits - BE - Mono.aiff  22050Hz - 24Bits - LE - Stereo.aiff  22050Hz - 32Bits - LE - Mono.aiff  22050Hz - 32Bits - LE - Stereo.aiff  22050Hz - 8Bits - BE - Mono.aiff  22050Hz - 8Bits - BE - Stereo.aiff  22050Hz - 8Bits - LE - Mono.aiff  22050Hz - 8Bits - LE - Stereo.aiff  44100Hz - 16Bits - BE - Mono.aiff  44100Hz - 16Bits - BE - Mono.m4a  44100Hz - 16Bits - BE - Stereo.aiff  44100Hz - 16Bits - BE - Stereo.m4a  44100Hz - 16Bits - LE - Mono.aiff  44100Hz - 16Bits - LE - Mono.m4a  44100Hz - 16Bits - LE - Stereo.aiff  44100Hz - 16Bits - LE - Stereo.m4a  44100Hz - 24Bits - BE - Mono.aiff  44100Hz - 24Bits - BE - Mono.m4a  44100Hz - 24Bits - BE - Stereo.m4a  44100Hz - 24Bits - LE - Stereo.aiff  44100Hz - 32Bits - BE - Mono.aiff  44100Hz - 32Bits - BE - Mono.m4a  44100Hz - 32Bits - LE - Stereo.aiff  44100Hz - 32Bits - LE - Stereo.m4a  44100Hz - 8Bits - BE - Mono.aiff  44100Hz - 8Bits - BE - Stereo.aiff  44100Hz - 8Bits - LE - Mono.aiff  44100Hz - 8Bits - LE - Stereo.aiff  48000Hz - 16Bits - BE - Mono.aiff  48000Hz - 16Bits - BE - Mono.m4a  48000Hz - 16Bits - BE - Stereo.aiff  48000Hz - 16Bits - BE - Stereo.m4a  48000Hz - 16Bits - LE - Mono.aiff  48000Hz - 16Bits - LE - Mono.m4a  48000Hz - 16Bits - LE - Stereo.aiff  48000Hz - 16Bits - LE - Stereo.m4a  (+53 more)
xcode/: ios.xcconfig  mac.xcconfig  mzgl.xcconfig  project.xcconfig
xcode/mzgl.xcodeproj/: project.pbxproj
(+364 files in other folders)
